fix: modify based on review
